--- a/Custom Thank You Page - Ecommerce Transaction Complete dataLayer.html
+++ b/Custom Thank You Page - Ecommerce Transaction Complete dataLayer.html
@@ -21,7 +21,7 @@
         purchase: {
             actionField: {
                 id: {{URL - Thrivecart Order - ID}},
-                affiliation: "ThriveCart",
+                affiliation: "",
                 revenue: {{custom js - order total formatted}},
                 tax: "",
                 shipping: "",
